# note_service

./: .env  Cargo.toml  README.md  note_service.db
src/: db.rs  handlers.rs  main.rs  note.rs  routes.rs
src/db/: db.rs
src/handlers/: add_note.rs  delete_note_by_id.rs  get_note_by_id.rs  get_notes.rs  mod.rs  update_note_by_id.rs
src/routes/: mod.rs  routes.rs
