[package]
name = "note_service"
version = "0.1.0"
edition = "2021"
authors = ["Anatolii Maltsev <https://www.linkedin.com/in/anatolii-maltsev/>"]

[dependencies]
actix-web = "4.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
